force-app/main/default/objects/Project_Charges__c/fields/EYI_Active__c.field-meta.xml
<CustomField>
    <fullName>EYI_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>