force-app/main/default/objects/Project_Charges__c/fields/EYI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount__c</fullName>
    <label>Amount</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>