force-app/main/default/objects/Project_Charges__c/fields/EYI_Apply_This_Charge_to_FA__c.field-meta.xml
<CustomField>
    <fullName>EYI_Apply_This_Charge_to_FA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply This Charge to FA</label>
    <type>Checkbox</type>
</CustomField>