force-app/main/default/objects/Project_Charges__c/fields/EYI_Charge_Bucket__c.field-meta.xml
<CustomField>
    <fullName>EYI_Charge_Bucket__c</fullName>
    <label>Charge Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Value</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Society Charges</fullName>
            </value>
            <value>
                <fullName>Stamp Duty and Registration</fullName>
            </value>
            <value>
                <fullName>Maintenance Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>