force-app/main/default/objects/Project_Charges__c/fields/EYI_Charge_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Charge_Percentage__c</fullName>
    <label>Charge %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>