force-app/main/default/objects/Project_Charges__c/fields/EYI_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Charges</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>