force-app/main/default/objects/Project_Charges__c/fields/EYI_External_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>