force-app/main/default/objects/Project_Charges__c/fields/EYI_Global_Charges__c.field-meta.xml
<CustomField>
    <fullName>EYI_Global_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Charges</label>
    <referenceTo>EYI_Global_Charges__c</referenceTo>
    <relationshipLabel>Project Charges</relationshipLabel>
    <relationshipName>Project_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>