force-app/main/default/objects/Project_Charges__c/fields/EYI_Government_Charges__c.field-meta.xml
<CustomField>
    <fullName>EYI_Government_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government Charges</label>
    <type>Checkbox</type>
</CustomField>