force-app/main/default/objects/Project_Charges__c/fields/EYI_GST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Percentage__c</fullName>
    <label>GST Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST-5</fullName>
            </value>
            <value>
                <fullName>GST-12</fullName>
            </value>
            <value>
                <fullName>GST-18</fullName>
            </value>
            <value>
                <fullName>GST - 8</fullName>
                <isActive>false</isActive>
                <label>GST - 8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>