force-app/main/default/objects/Project_Charges__c/fields/EYI_Lumpsum_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lumpsum_Charge_Amount__c</fullName>
    <label>Lumpsum Charge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>