force-app/main/default/objects/Project_Charges__c/fields/EYI_Payable_At__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payable_At__c</fullName>
    <label>Payable At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As per the payment milestone</fullName>
            </value>
            <value>
                <fullName>At Registration</fullName>
            </value>
            <value>
                <fullName>At Possession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>