force-app/main/default/objects/Project_Charges__c/fields/EYI_Payment_Plan_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Plan_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan Applicable</label>
    <type>Checkbox</type>
</CustomField>