force-app/main/default/objects/Project_Charges__c/fields/EYI_Registration_charge__c.field-meta.xml
<CustomField>
    <fullName>EYI_Registration_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration charge</label>
    <type>Checkbox</type>
</CustomField>