force-app/main/default/objects/Project_Charges__c/fields/EYI_SGST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_SGST_Percentage__c</fullName>
    <formula>VALUE( 
    MID( TEXT(EYI_GST_Percentage__c), 
         FIND(&quot;-&quot;, TEXT(EYI_GST_Percentage__c)) + 1, 
         LEN(TEXT(EYI_GST_Percentage__c)) 
    ) 
) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>