force-app/main/default/objects/Project_Charges__c/fields/EYI_SGST_Percentage_Calculations__c.field-meta.xml
<CustomField>
    <fullName>EYI_SGST_Percentage_Calculations__c</fullName>
    <formula>VALUE(
    MID(
        TEXT(EYI_GST_Percentage__c),
        FIND(&quot;-&quot;, TEXT(EYI_GST_Percentage__c)) + 1,
        LEN(TEXT(EYI_GST_Percentage__c))
    )
) / 200</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Percentage Calculation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>