force-app/main/default/objects/Project_Charges__c/fields/EYI_Term__c.field-meta.xml
<CustomField>
    <fullName>EYI_Term__c</fullName>
    <label>Term(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>