force-app/main/default/objects/Project_Charges__c/fields/EYI_Unique_Field__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unique_Field__c</fullName>
    <label>Unique Field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>