force-app/main/default/objects/Project_Charges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Rate__c</columns>
    <columns>EYI_GST_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Project__c</field>
        <operation>contains</operation>
        <value>Golden</value>
    </filters>
    <label>All</label>
</ListView>